still issues with sidebar. Not responsive .

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,6 @@ header h2 {
 
 /* Main Columns */
 .intro {
-	float: left;
 	text-align: center;
 	font-size: 1.3em;
 	border-bottom: 2px solid black;
@@ -76,6 +75,7 @@ header h2 {
 
 .summary {
 	font-size: 1.5em;
+
 }
 
 .explanation,
@@ -107,7 +107,7 @@ header h2 {
 	position: absolute;
 	left: 77%;
 	bottom: 0px;
-	top: 220%;
+	top: 150%;
 }
 
 .design-archives {
@@ -117,7 +117,7 @@ header h2 {
 	position: absolute;
 	left: 77%;
 	bottom: 0px;
-	top: 250%;
+	top: 170%;
 }
 
 .design-selection {
@@ -127,7 +127,7 @@ header h2 {
 	position: absolute;
 	left: 77%;
 	bottom: 0px;
-	top: 270%;
+	top: 185%;
 }
 
 
